[fix] mobile navbar overlap and cart quantity not dispalying correctly

--- a/src/styles/sass/header.sass
+++ b/src/styles/sass/header.sass
@@ -16,9 +16,13 @@ header.big
     color: white
 
 
-header.smaller
+div.header.smaller
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
   background: white
-  margin-top: 10.625rem //10.5rem
+  margin-top: 10.625rem
 
 .homepage
   header.big
